Update folderStructure Contents

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electric Cars, Solar & Clean Energy | Tesla</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="/assets/Tesla favicon" type="image/x-icon">
+
+    <!-- this is CSS -->
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- this is favicon -->
+    <link rel="shortcut icon" href="/assets/Tesla favicon" type="image/x-icon" >
 
 </head>
 
@@ -23,9 +26,9 @@
                 <span class="nav-item">Model S</span>
                 <span class="nav-item">Model 3</span>
                 <span class="nav-item">Model X</span>
+                <span class="nav-item">Solar Panels</span> 
                 <span class="nav-item">Model Y</span>
                 <span class="nav-item">Solar Roof</span>
-                <span class="nav-item">Solar Panels</span> 
             </div>
 
             <div class="right-menu">
